# kosmos

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.sh  deploy.sh  kubes.yaml
migrations/2024-01-29-0001-init/: down.sql  up.sql
migrations/2024-01-29-0001-targets/: down.sql  up.sql
src/: http.rs  ie.rs  lib.rs  mo.rs  models.rs  schema.rs  types.rs  worker.rs
