[package]
name = "kosmos"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AS207960/kosmos"
license = "MIT"
authors = ["Q Misell <q@as207960.net>"]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
byteorder = "1.5.0"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1.35.1", features = ["net", "rt-multi-thread", "macros", "io-util"] }
diesel = { version = "2.1.0", features = ["uuid", "chrono"] }
diesel_migrations = "2.1.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
reqwest = "0.12.4"
mobc = "0.8.3"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["serde_derive"] }
sha2 = "0.10.8"
hmac = "0.12.1"
celery = { version = "0.5.5", default-features = false, features = ["native-tls", "codegen"] }
ipnetwork = "0.20.0"
base64 = "0.22.1"
openssl = "0.10"
openssl-probe = "0.1.2"
tokio-postgres = "0.7.10"
async-trait = "0.1.77"
futures-util = "0.3.30"
postgres-openssl = "0.5.0"
rand = "0.8.5"
rocket = "0.5.0"
bytes = "1.5.0"
constant_time_eq = "0.3.0"

[dependencies.diesel-async]
version = "0.4.1"
features = ["postgres", "async-connection-wrapper", "tokio", "mobc", "tls-openssl"]
git = "https://github.com/AS207960/diesel_async.git"